Change text on webpage

--- a/reedem-app/public/manifest.json
+++ b/reedem-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Casper NFT Selfie - Reedem",
-  "name": "Casper NFT Selfie - Reedem",
+  "short_name": " NFT Selfie - Reedem",
+  "name": " NFT Selfie - Reedem",
   "icons": [
     {
       "src": "favicon.ico",
