--- a/selfie-pwa/public/manifest.json
+++ b/selfie-pwa/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Casper NFT Selfie",
-  "name": "Casper NFT Selfie",
+  "short_name": "NFT Selfie",
+  "name": "NFT Selfie",
   "icons": [
     {
       "src": "favicon.ico",
